[package]
name = "netscanner"
version = "0.4.1"
edition = "2021"
description = "Network Scanner"
license = "MIT"
authors = ["Chleba <chlebik@gmail.com>"]
repository = "https://github.com/Chleba/netscanner"
homepage = "https://github.com/Chleba/netscanner"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.31"
cidr = "0.2.2"
clap = { version = "4.4.5", features = ["derive", "cargo", "wrap_help", "unicode", "string", "unstable-styles"] }
color-eyre = "0.6.2"
config = "0.13.3"
crossterm = { version = "0.27.0", features = ["serde", "event-stream"] }
derive_deref = "1.1.1"
directories = "5.0.1"
dns-lookup = "2.0.4"
futures = "0.3.28"
human-panic = "1.2.0"
ipnetwork = "0.20.0"
itertools = "0.12.0"
json5 = "0.4.1"
lazy_static = "1.4.0"
libc = "0.2.148"
log = "0.4.20"
mac_oui = { version = "0.4.8", features = ["with-db"] }
ping = "0.5.1"
pnet = "0.34.0"
pretty_assertions = "1.4.0"
rand = "0.8.5"
ratatui = { version = "0.26.1", features = ["serde", "macros"] }
regex = "1.10.3"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = "0.26.1"
surge-ping = "0.8.0"
throbber-widgets-tui = "0.4.1"
tokio = { version = "1.32.0", features = ["full"] }
tokio-util = "0.7.9"
tokio-wifiscanner = "0.2.1"
tracing = "0.1.37"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
tui-input = { version = "0.8.0", features = ["serde"] }
