[package]
name = "netscanner"
version = "0.6.3"
edition = "2021"
description = "Network Scanner"
license = "MIT"
authors = ["Chleba <chlebik@gmail.com>"]
repository = "https://github.com/Chleba/netscanner"
homepage = "https://github.com/Chleba/netscanner"

[profile.release]
strip = true
opt-level = "z"
lto = true

[package.metadata.deb]
maintainer = "Dominic Orsi <dominic.orsi@gmail.com>"
depends = "iw"
section = "utils"
priority = "optional"
changelog = "debian/changelog"
license-file = ["LICENSE", "4"]
extended-description = """\
Terminal Network scanner & diagnostic tool with modern TUI (terminal user interface). \n
GitHub: https://github.com/Chleba/netscanner"""
assets = [
    [
        "target/release/netscanner",
        "usr/bin/",
        "4755",
    ],
    [
        "README.md",
        "usr/share/doc/netscanner/README",
        "644",
    ],
    [
        "debian/netscanner.manpage",
        "usr/share/man/man1/netscanner.1",
        "644",
    ],
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
better-panic = "0.3.0"
chrono = "0.4.31"
cidr = "0.2.2"
clap = { version = "4.4.5", features = [
    "derive",
    "cargo",
    "wrap_help",
    "unicode",
    "string",
    "unstable-styles",
] }
color-eyre = "0.6.3"
config = "0.14.0"
crossterm = { version = "0.28.1", features = ["serde", "event-stream"] }
csv = "1.3.0"
derive_deref = "1.1.1"
directories = "5.0.1"
dns-lookup = "2.0.4"
fastping-rs = "0.2.4"
futures = "0.3.30"
human-panic = "2.0.1"
ipnetwork = "0.20.0"
itertools = "0.13.0"
json5 = "0.4.1"
lazy_static = "1.5.0"
libc = "0.2.158"
log = "0.4.22"
mac_oui = { version = "0.4.11", features = ["with-db"] }
pnet = "0.35.0"
port-desc = "0.1.1"
pretty_assertions = "1.4.0"
rand = "0.8.5"
ratatui = { version = "0.28.1", features = ["serde", "macros"] }
regex = "1.10.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
signal-hook = "0.3.17"
strip-ansi-escapes = "0.2.0"
strum = "0.26.3"
surge-ping = "0.8.1"
tokio = { version = "1.40.0", features = ["full"] }
tokio-util = "0.7.12"
tokio-wifiscanner = "0.2.2"
tracing = "0.1.40"
tracing-error = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "serde"] }
tui-input = { version = "0.10.1", features = ["serde"] }
tui-scrollview = "0.4.0"

[target.'cfg(target_os = "windows")'.build-dependencies]
anyhow = "1.0.86"
http_req = "0.11.1"
zip = "2.1.6"
clap = { version = "4.5.13", features = ["derive"] }
clap-verbosity-flag = "2.2.1"
clap_complete = "4.5.12"
clap_mangen = "0.2.23"
